--- a/style.css
+++ b/style.css
@@ -26,17 +26,26 @@ section {
     position: relative;
     color: white;
     z-index: 0;
+    background-image: url(Website_Assets/banner_compressed.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    color: white;
+    z-index: 0;
 }
 
 #overlay1 {
     background: rgba(255,122,122,1);
-background: -moz-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
-background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,122,122,1)), color-stop(50%, rgba(209,15,60,0.53)), color-stop(100%, rgba(255,122,122,0.05)));
-background: -webkit-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
-background: -o-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
-background: -ms-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
-background: linear-gradient(135deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7a7a', endColorstr='#ff7a7a', GradientType=1 );
+    background: -moz-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,122,122,1)), color-stop(50%, rgba(209,15,60,0.53)), color-stop(100%, rgba(255,122,122,0.05)));
+    background: -webkit-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -o-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: linear-gradient(135deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7a7a', endColorstr='#ff7a7a', GradientType=1 );
 	position: absolute;
 	height: 100%;
 	width: 100%;
