--- a/style.css
+++ b/style.css
@@ -64,3 +64,72 @@ section {
 	display: none;
 	font-size: 40px;
 }
+
+#social_links {
+    width: 100%;
+    height: 100px;
+    display: block;
+}
+
+.icons {
+    text-decoration: none;
+    display: inline-block;
+    height: 64px;
+    width: 64px;
+    margin-top: 20px;
+    /*float: left;*/
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#copyright {
+    display: block;
+    width: 100%;
+    text-align: center;
+    height: 20px;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+#footer {
+    margin: 0;
+    height: auto;
+    width: 100%;
+    display: block;
+    background-color: #6B6B6B;
+    overflow: hidden;
+}
+
+.goto-next {
+	background-image: url("Website_Assets/arrow_white.png");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	display: block;
+	height: 2em;
+	width: 3em;
+	position: absolute;
+	bottom: 0;
+	left: 90%;
+	z-index: 10;
+}
+
+.goto-next:hover {
+    cursor: pointer;
+}
+
+.goto-next-black {
+	background-image: url("images/arrow_black.png");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	content: '';
+	display: block;
+	height: 2em;
+	width: 3em;
+	position: absolute;
+	bottom: 0;
+	left: 90%;
+	z-index: 10;
+}    
