--- a/style.css
+++ b/style.css
@@ -12,14 +12,20 @@ section {
 
 
 #header {
-	height: 60px;
-	background-color: #FF7A7A;
+	height: 80px;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	z-index: 100;
-    display: none;
+    display: block;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8223b2+0,4b50dd+100 */
+    background: #8223b2; /* Old browsers */
+    background: -moz-linear-gradient(top,  #8223b2 0%, #4b50dd 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #8223b2 0%,#4b50dd 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #8223b2 0%,#4b50dd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8223b2', endColorstr='#4b50dd',GradientType=0 ); /* IE6-9 */
+
 }
 
 #banner {
