--- a/style.css
+++ b/style.css
@@ -236,7 +236,7 @@ section {
     background-repeat: no-repeat;
 }
 
-#overlay2 {
+.overlay2 {
     background-color: rgba(0,0,0,.5);
     position: absolute;
 	height: 100%;
@@ -272,4 +272,22 @@ section {
     color: white;
     margin: 0;
     padding: 10px;
+}
+
+#three {
+    background-image: url(Website_Assets/warp_references.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#references_wrapper {
+    height: 90%;
+    width: 95%;
+    margin: 0 auto;
+    display: block;
+    position: relative;
+    color: white;
 }
