--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ section {
 	position: absolute;
 	bottom: 0;
 	left: 90%;
-	z-index: 10;
+	z-index: 50;
 }
 
 .goto-next:hover {
@@ -203,8 +203,8 @@ section {
 }
 
 .profile_picture {
-    height: 90%;
-    width: 40%;
+    height: 285px;
+    width: 285px;
     display: block;
     float: left;
     position: relative;
@@ -238,11 +238,12 @@ section {
 
 .overlay2 {
     background-color: rgba(0,0,0,.5);
-    position: absolute;
+    position: relative;
 	height: 100%;
 	width: 100%;
 	z-index: 1;
 	display: block;
+    margin: 0;
 }
 
 #one {
@@ -308,3 +309,641 @@ section {
     float: left;
     width: 45%;
 }
+
+.description {
+    font-size: 60px;
+    margin-top: 150px;
+}
+
+@media only screen and (min-width: 0px) and (max-width: 1140px) {
+    
+#header {
+	height: 80px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 100;
+    display: block;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8223b2+0,4b50dd+100 */
+    background: #8223b2; /* Old browsers */
+    background: -moz-linear-gradient(left,  #8223b2 0%, #4b50dd 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  #8223b2 0%,#4b50dd 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  #8223b2 0%,#4b50dd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8223b2', endColorstr='#4b50dd',GradientType=1 ); /* IE6-9 */
+
+
+}
+
+#banner {
+    position: relative;
+    color: white;
+    z-index: 0;
+    background-image: url(Website_Assets/banner_compressed.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    color: white;
+    z-index: 0;
+    height: 700px;
+}
+
+#overlay1 {
+    background: rgba(0,0,0,.5);
+    /*background: -moz-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,122,122,1)), color-stop(50%, rgba(209,15,60,0.53)), color-stop(100%, rgba(255,122,122,0.05)));
+    background: -webkit-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -o-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: linear-gradient(135deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7a7a', endColorstr='#ff7a7a', GradientType=1 );*/
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	display: none;
+}
+
+#banner_text {
+	top: 10%; /*30%*/
+	text-align: center;
+	display: block;
+	height: 100px;
+	width: 100%;
+	z-index: 1;
+	position: relative;
+	display: none;
+	font-size: 30px;
+}
+
+#social_links {
+    width: 100%;
+    height: 100px;
+    display: block;
+}
+
+.icons {
+    text-decoration: none;
+    display: inline-block;
+    height: 64px;
+    width: 64px;
+    margin-top: 20px;
+    /*float: left;*/
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#copyright {
+    display: block;
+    width: 100%;
+    text-align: center;
+    height: 20px;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+#footer {
+    margin: 0;
+    height: auto;
+    width: 100%;
+    display: block;
+    background-color: #6B6B6B;
+    overflow: hidden;
+}
+
+.goto-next {
+	background-image: url("Website_Assets/arrow_white.png");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	display: block;
+	height: 2em;
+	width: 3em;
+	position: absolute;
+	bottom: 0;
+	left: 90%;
+	z-index: 50;
+}
+
+.goto-next:hover {
+    cursor: pointer;
+}
+
+.goto-next-black {
+	background-image: url("Website_Assets/arrow_black.png");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	content: '';
+	display: block;
+	height: 2em;
+	width: 3em;
+	position: absolute;
+	bottom: 0;
+	left: 90%;
+	z-index: 10;
+}
+
+#logo_text {
+	display: inline-block;
+	float: left;
+	margin-left: 35px;
+    margin-top: -5px;
+    height: 88.5px;
+    width: 150px;
+}
+
+#apple_badge {
+    float: right;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: 17px;
+    margin-right: 5px;
+}
+#creators {
+    top: 10vh;
+    height: auto;
+    width:  100%;
+    display: block;
+    margin-top: 0 auto;
+    position: relative;
+}
+
+#jake {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+#thomas {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+#mike {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+#sam {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+.profile_picture {
+    height: auto;
+    width: 100%;
+    display: block;
+    float: none;
+    position: relative;
+    margin-top: 0%;
+}
+
+.picture_size {
+    height: 50%;
+    width: 50%;
+}
+
+.name_bio {
+    height: auto;
+    width: 100%;
+    display: block;
+    float: none;
+    position: relative;
+    margin-top: 2%;
+    right: 0%;
+    color: white;
+    margin-bottom: 50px;
+}
+
+#two {
+    background-image: url(Website_Assets/bio_background_compressed.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 3000px;
+    margin: 0px;
+}
+
+.overlay2 {
+    background-color: rgba(0,0,0,.5);
+    position: relative;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	display: block;
+}
+
+#one {
+    background-image: url(Website_Assets/instructions_background.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0px;
+    height: auto;
+}
+
+#wrapper {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0, .6);
+}
+
+#instructions_text {
+    color: white;
+    margin: 0px;
+    display: inline-block;
+    padding: 0px;
+    position: relative;
+    float: none;
+    width: 100%;
+    height: auto;
+    margin-bottom: 120px;
+}
+
+#three {
+    background-image: url(Website_Assets/warp_references.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#references_wrapper {
+    height: auto;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    position: relative;
+    color: white;
+}
+
+#references_list {
+    height: 100%;
+    width: 100%;
+    float: left;
+    display: block;
+    position: relative;
+    margin: 0px;
+    text-align: left;
+}
+
+#overview {
+    color: white;
+    margin: 0px;
+    display: inline-block;
+    padding: 0px;
+    position: relative;
+    float: none;
+    width: 100%;
+    height: auto;
+}
+    
+.description {
+    font-size: 60px;
+    margin: 0;
+    overflow: hidden;
+    margin-top: 100px;
+}
+    
+}
+@media only screen and (min-height: 0px) and (max-height: 560px)  {
+    
+#header {
+	height: 80px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	z-index: 100;
+    display: block;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#8223b2+0,4b50dd+100 */
+    background: #8223b2; /* Old browsers */
+    background: -moz-linear-gradient(left,  #8223b2 0%, #4b50dd 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left,  #8223b2 0%,#4b50dd 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right,  #8223b2 0%,#4b50dd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8223b2', endColorstr='#4b50dd',GradientType=1 ); /* IE6-9 */
+
+
+}
+
+#banner {
+    position: relative;
+    color: white;
+    z-index: 0;
+    background-image: url(Website_Assets/banner_compressed.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    color: white;
+    z-index: 0;
+    height: 700px;
+}
+
+#overlay1 {
+    background: rgba(0,0,0,.5);
+    /*background: -moz-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(255,122,122,1)), color-stop(50%, rgba(209,15,60,0.53)), color-stop(100%, rgba(255,122,122,0.05)));
+    background: -webkit-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -o-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    background: linear-gradient(135deg, rgba(255,122,122,1) 0%, rgba(209,15,60,0.53) 50%, rgba(255,122,122,0.05) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7a7a', endColorstr='#ff7a7a', GradientType=1 );*/
+	position: absolute;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	display: none;
+}
+
+#banner_text {
+	top: 10%; /*30%*/
+	text-align: center;
+	display: block;
+	height: 100px;
+	width: 100%;
+	z-index: 1;
+	position: relative;
+	display: none;
+	font-size: 30px;
+}
+
+#social_links {
+    width: 100%;
+    height: 100px;
+    display: block;
+}
+
+.icons {
+    text-decoration: none;
+    display: inline-block;
+    height: 64px;
+    width: 64px;
+    margin-top: 20px;
+    /*float: left;*/
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#copyright {
+    display: block;
+    width: 100%;
+    text-align: center;
+    height: 20px;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+#footer {
+    margin: 0;
+    height: auto;
+    width: 100%;
+    display: block;
+    background-color: #6B6B6B;
+    overflow: hidden;
+}
+
+.goto-next {
+	background-image: url("Website_Assets/arrow_white.png");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	display: block;
+	height: 2em;
+	width: 3em;
+	position: absolute;
+	bottom: 0;
+	left: 90%;
+	z-index: 50;
+}
+
+.goto-next:hover {
+    cursor: pointer;
+}
+
+.goto-next-black {
+	background-image: url("Website_Assets/arrow_black.png");
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: contain;
+	content: '';
+	display: block;
+	height: 2em;
+	width: 3em;
+	position: absolute;
+	bottom: 0;
+	left: 90%;
+	z-index: 10;
+}
+
+#logo_text {
+	display: inline-block;
+	float: left;
+	margin-left: 35px;
+    margin-top: -5px;
+    height: 88.5px;
+    width: 150px;
+}
+
+#apple_badge {
+    float: right;
+    display: inline-block;
+    vertical-align: middle;
+    margin-top: 17px;
+    margin-right: 5px;
+}
+#creators {
+    top: 10vh;
+    height: auto;
+    width:  100%;
+    display: block;
+    margin-top: 0 auto;
+    position: relative;
+}
+
+#jake {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+#thomas {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+#mike {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+#sam {
+    height: auto;
+    width: 100%;
+    display: block;
+    position: relative;
+    float: none;
+    margin: 0;
+}
+
+.profile_picture {
+    height: auto;
+    width: 100%;
+    display: block;
+    float: none;
+    position: relative;
+    margin-top: 2%;
+}
+
+.picture_size {
+    height: 50%;
+    width: 50%;
+}
+
+.name_bio {
+    height: auto;
+    width: 100%;
+    display: block;
+    float: none;
+    position: relative;
+    margin-top: 2%;
+    right: 0%;
+    color: white;
+}
+
+#two {
+    background-image: url(Website_Assets/bio_background_compressed.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 2200px;
+    margin: 0px;
+}
+
+.overlay2 {
+    background-color: rgba(0,0,0,.5);
+    position: relative;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	display: block;
+}
+
+#one {
+    background-image: url(Website_Assets/instructions_background.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin: 0px;
+    height: auto;
+}
+
+#wrapper {
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0,0,0, .6);
+}
+
+#instructions_text {
+    color: white;
+    margin: 0px;
+    display: inline-block;
+    padding: 0px;
+    position: relative;
+    float: none;
+    width: 100%;
+    height: auto;
+    margin-bottom: 120px;
+}
+
+#three {
+    background-image: url(Website_Assets/warp_references.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+#references_wrapper {
+    height: auto;
+    width: 100%;
+    margin: 0 auto;
+    display: block;
+    position: relative;
+    color: white;
+}
+
+#references_list {
+    height: 100%;
+    width: 100%;
+    float: left;
+    display: block;
+    position: relative;
+    margin: 0px;
+    text-align: left;
+}
+
+#overview {
+    color: white;
+    margin: 0px;
+    display: inline-block;
+    padding: 0px;
+    position: relative;
+    float: none;
+    width: 100%;
+    height: auto;
+}
+
+.description {
+    font-size: 60px;
+    margin: 0;
+    overflow: hidden;
+    margin-top: 100px;
+}
+    
+}
+
