--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ section {
     display: block;
     position: relative;
     float: left;
-    margin: 0;
+    margin: 0px;
 }
 
 #thomas {
@@ -181,7 +181,7 @@ section {
     display: block;
     position: relative;
     float: right;
-    margin: 0;
+    margin: 0px;
 }
 
 #mike {
@@ -190,7 +190,7 @@ section {
     display: block;
     position: relative;
     float: right;
-    margin: 0;
+    margin: 0px;
 }
 
 #sam {
@@ -199,7 +199,7 @@ section {
     display: block;
     position: relative;
     float: left;
-    margin: 0;
+    margin: 0px;
 }
 
 .profile_picture {
@@ -331,6 +331,7 @@ section {
     background: -webkit-linear-gradient(left,  #8223b2 0%,#4b50dd 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to right,  #8223b2 0%,#4b50dd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8223b2', endColorstr='#4b50dd',GradientType=1 ); /* IE6-9 */
+    overflow: hidden;
 
 
 }
@@ -407,7 +408,7 @@ section {
 }
 
 #footer {
-    margin: 0;
+    margin: 0px;
     height: auto;
     width: 100%;
     display: block;
@@ -479,7 +480,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 #thomas {
@@ -488,7 +489,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 #mike {
@@ -497,7 +498,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 #sam {
@@ -506,7 +507,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 .profile_picture {
@@ -632,8 +633,27 @@ section {
     margin-top: 100px;
 }
     
+#four {
+    background-color: #F2F2F2;
+}
+    
+#picsize_screenshot {
+    height: 80%;
+    width: 80%;
+}
+    
 }
 @media only screen and (min-height: 0px) and (max-height: 630px)  {
+    
+#four {
+    background-color: #F2F2F2;
+    height: auto;
+}
+    
+#picsize_screenshot {
+    height: 80%;
+    width: 80%;
+}
     
 #header {
 	height: 80px;
@@ -649,8 +669,7 @@ section {
     background: -webkit-linear-gradient(left,  #8223b2 0%,#4b50dd 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to right,  #8223b2 0%,#4b50dd 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8223b2', endColorstr='#4b50dd',GradientType=1 ); /* IE6-9 */
-
-
+    overflow: hidden;
 }
 
 #banner {
@@ -797,7 +816,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 #thomas {
@@ -806,7 +825,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 #mike {
@@ -815,7 +834,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 #sam {
@@ -824,7 +843,7 @@ section {
     display: block;
     position: relative;
     float: none;
-    margin: 0;
+    margin: 0px;
 }
 
 .profile_picture {
@@ -972,4 +991,13 @@ section {
 #github_link {
     margin-top: 600px;
     text-decoration: none;
+}
+
+#four {
+    background-color: #F2F2F2;
+    height: auto;
+}
+
+#screenshot {
+    overflow: hidden;
 }
