--- a/style.css
+++ b/style.css
@@ -256,6 +256,23 @@ section {
     margin: 0px;
 }
 
+#download_button {
+    border-radius: 100%;
+    height: auto;
+    width: 150px;
+    padding: 10px;
+    background-color: azure;
+    margin: 0 auto;
+    display: inline-block;
+    margin-top: 400px;
+    margin-left: 40px;
+}
+
+#download_link {
+    margin-top: 600px;
+    text-decoration: none;
+}
+
 #wrapper {
     height: 100%;
     width: 100%;
@@ -270,6 +287,23 @@ section {
     position: relative;
     float: right;
     width: 45%;
+}
+
+#githublink_button {
+    border-radius: 100%;
+    height: auto;
+    width: 150px;
+    padding: 10px;
+    background-color: azure;
+    margin: 0 auto;
+    display: inline-block;
+    margin-top: 400px;
+    margin-right: 40px;
+}
+
+#github_link {
+    margin-top: 600px;
+    text-decoration: none;
 }
 
 #three {
@@ -316,6 +350,24 @@ section {
 }
 
 @media only screen and (min-width: 0px) and (max-width: 1140px) {
+    
+#download_button {
+    border-radius: 100%;
+    height: auto;
+    width: 150px;
+    padding: 10px;
+    background-color: azure;
+    margin: 0 auto;
+    display: block;
+    margin-right: 0px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+#download_link {
+    margin-top: 600px;
+    text-decoration: none;
+}
     
 #header {
 	height: 80px;
@@ -643,8 +695,44 @@ section {
     width: 80%;
 }
     
+#githublink_button {
+    border-radius: 100%;
+    height: auto;
+    width: 150px;
+    padding: 10px;
+    background-color: azure;
+    margin: 0 auto;
+    display: block;
+    margin-right: 0px;
+    margin: 0 auto;
+    margin-top: 300px;
+}
+
+#github_link {
+    margin-top: 600px;
+    text-decoration: none;
+}
+    
 }
 @media only screen and (min-height: 0px) and (max-height: 630px)  {
+    
+#download_button {
+    border-radius: 100%;
+    height: auto;
+    width: 150px;
+    padding: 10px;
+    background-color: azure;
+    margin: 0 auto;
+    display: block;
+    margin-right: 0px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+#download_link {
+    margin-top: 600px;
+    text-decoration: none;
+}   
     
 #four {
     background-color: #F2F2F2;
@@ -969,9 +1057,6 @@ section {
     overflow: hidden;
     margin-top: 100px;
 }
-    
-}
-
 
 #githublink_button {
     border-radius: 100%;
@@ -980,18 +1065,22 @@ section {
     padding: 10px;
     background-color: azure;
     margin: 0 auto;
-    display: none;
-    margin-top: 400px;
-}
-
-#button_text {
+    display: block;
+    margin-right: 0px;
     margin: 0 auto;
-    vertical-align: middle;
+    margin-top: 300px;
 }
 
 #github_link {
     margin-top: 600px;
     text-decoration: none;
+}
+    
+}
+
+.button_text {
+    margin: 0 auto;
+    vertical-align: middle;
 }
 
 #four {
